k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cms-backend
  name: cms-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cms-backend
  template:
    metadata:
      labels:
        app: cms-backend
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/macys-pipeline-dev/back-end-deployment
          imagePullPolicy: Always
          name: wagtail
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 9090
              protocol: TCP
