k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cms-backend
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: cms-backend
  type: NodePort
